--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
+    "express-handlebars": "^7.1.2",
     "fs": "^0.0.1-security",
+    "handlebars": "^4.7.8",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   }
 }
